--- a/Universidade/Views/Disciplina/Details.cshtml
+++ b/Universidade/Views/Disciplina/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Universidade.Models.Disciplina
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Disciplina</h4>
     <hr />
@@ -30,6 +29,12 @@
             @Html.DisplayFor(model => model.Ativo)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DataRegistro)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DataRegistro)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Aluno)
         </dt>
         <dd class = "col-sm-10">
@@ -42,10 +47,8 @@
             @Html.DisplayFor(model => model.Professor.Id)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
