--- a/Universidade/Views/Aluno/Create.cshtml
+++ b/Universidade/Views/Aluno/Create.cshtml
@@ -28,6 +28,25 @@
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label>Disciplinas Abertas</label>
+                @if (ViewBag.Disciplinas != null)
+                {
+                    @foreach (var disciplinaItens in ViewBag.Disciplinas)
+                    {
+                        <div class="form-check">
+                            <input type="checkbox" name="disciplinasSelecionadas" value="@disciplinaItens.Value" class="form-check-input" />
+                            <label class="form-check-label">@disciplinaItens.Text</label>
+                        </div>
+                    }
+                }
+                else
+                {
+                    <p>Não há disciplinas disponíveis.</p>
+                }
+            </div>
+
+            <div class="form-group">
+                <br />
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
