--- a/Universidade/Views/Aluno/Details.cshtml
+++ b/Universidade/Views/Aluno/Details.cshtml
@@ -1,36 +1,51 @@
 ﻿@model Universidade.Models.Aluno
 
 @{
-    ViewData["Title"] = "Details";
+	ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>Aluno</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Matricula)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Matricula)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Data)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Data)
-        </dd>
-    </dl>
+	<h4>Aluno</h4>
+	<hr />
+	<dl class="row">
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Nome)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Nome)
+		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Matricula)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Matricula)
+		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Data)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Data)
+		</dd>
+
+
+		<div>
+			<dt class="col-sm-10">Disciplinas associadas:</dt>
+			<ul>
+
+				@foreach (var disciplina in Model.Disciplinas)
+				{
+					<div>
+						@disciplina.Nome - Prof. @disciplina.Professor.Nome
+					</div>
+				}
+			</ul>
+		</div>
+	</dl>
+
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+	<a asp-action="Index">Back to List</a>
 </div>
