--- a/Universidade/Views/Disciplina/Index.cshtml
+++ b/Universidade/Views/Disciplina/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Ativo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Aluno)
+                @Html.DisplayNameFor(model => model.DataRegistro)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Professor)
@@ -43,10 +43,10 @@
                 @Html.DisplayFor(modelItem => item.Ativo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Aluno.Id)
+                @Html.DisplayFor(modelItem => item.DataRegistro)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Professor.Id)
+                @Html.DisplayFor(modelItem => item.Professor.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
