--- a/Universidade/Views/Disciplina/Details.cshtml
+++ b/Universidade/Views/Disciplina/Details.cshtml
@@ -38,8 +38,20 @@
             @Html.DisplayNameFor(model => model.Professor)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Professor.Id)
+            @Html.DisplayFor(model => model.Professor.Nome)
         </dd>
+        <div>
+            <dt class="col-sm-10">Alunos com essa disciplina:</dt>
+            <ul>
+
+                @foreach (var alunosItens in Model.Alunos)
+                {
+                    <div>
+                        @alunosItens.Nome
+                    </div>
+                }
+            </ul>
+        </div>
     </dl>
 </div>
 <div>
