--- a/Universidade/Views/Disciplina/Details.cshtml
+++ b/Universidade/Views/Disciplina/Details.cshtml
@@ -35,6 +35,13 @@
             @Html.DisplayFor(model => model.DataRegistro)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Alunos)
+
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DataRegistro)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Professor)
         </dt>
         <dd class = "col-sm-10">
