--- a/Universidade/Views/Disciplina/Create.cshtml
+++ b/Universidade/Views/Disciplina/Create.cshtml
@@ -27,15 +27,9 @@
                     <input class="form-check-input" asp-for="Ativo" /> @Html.DisplayNameFor(model => model.Ativo)
                 </label>
             </div>
-           
             <div class="form-group">
-                <label asp-for="DataRegistro" class="control-label"></label>
-                <input asp-for="DataRegistro" class="form-control" />
-                <span asp-validation-for="DataRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProfessorId" class="control-label"></label>
-                <select asp-for="ProfessorId" class ="form-control" asp-items="ViewBag.ProfessorId"></select>
+                <label asp-for="Professor" class="control-label"></label>
+                <select asp-for="Professor" class ="form-control" asp-items="ViewBag.Professor"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
