--- a/Universidade/Views/Disciplina/Delete.cshtml
+++ b/Universidade/Views/Disciplina/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.DataRegistro)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Aluno)
+            @Html.DisplayNameFor(model => model.Alunos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Aluno.Id)
+            @Html.DisplayFor(model => model.Alunos)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Professor)
