--- a/Universidade/Views/Disciplina/Edit.cshtml
+++ b/Universidade/Views/Disciplina/Edit.cshtml
@@ -29,14 +29,9 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="DataRegistro" class="control-label"></label>
-                <input asp-for="DataRegistro" class="form-control" />
-                <span asp-validation-for="DataRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProfessorId" class="control-label"></label>
-                <select asp-for="ProfessorId" class="form-control" asp-items="ViewBag.ProfessorId"></select>
-                <span asp-validation-for="ProfessorId" class="text-danger"></span>
+                <label asp-for="Professor" class="control-label"></label>
+                <select asp-for="Professor" class="form-control" asp-items="ViewBag.Professor"></select>
+                <span asp-validation-for="Professor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
