--- a/Universidade/Views/Disciplina/Index.cshtml
+++ b/Universidade/Views/Disciplina/Index.cshtml
@@ -25,9 +25,6 @@
                 @Html.DisplayNameFor(model => model.DataRegistro)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Aluno)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Professor)
             </th>
             <th></th>
@@ -49,10 +46,7 @@
                 @Html.DisplayFor(modelItem => item.DataRegistro)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Aluno.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Professor.Id)
+                @Html.DisplayFor(modelItem => item.Professor.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
