--- a/Universidade/Views/Shared/_Layout.cshtml
+++ b/Universidade/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Aluno" asp-action="Index">Alunos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Professors" asp-action="Index">Professores</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Index">Professores</a>
                         </li>
                     </ul>
                 </div>
