--- a/Universidade/Views/Disciplina/Edit.cshtml
+++ b/Universidade/Views/Disciplina/Edit.cshtml
@@ -29,8 +29,8 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="Professor" class="control-label"></label>
-                <select asp-for="Professor" class="form-control" asp-items="ViewBag.Professor"></select>
+                <label asp-for="ProfessorId" class="control-label"></label>
+                <select asp-for="ProfessorId" class="form-control" asp-items="ViewBag.Professor"></select>
                 <span asp-validation-for="Professor" class="text-danger"></span>
             </div>
             <div class="form-group">
