--- a/Universidade/Views/Aluno/Edit.cshtml
+++ b/Universidade/Views/Aluno/Edit.cshtml
@@ -39,8 +39,10 @@
         }
     </div>
 
-    <button type="submit" class="btn btn-primary">Salvar</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+    <button type="submit" class="btn btn-primary">Edit</button>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 </form>
 
 @section Scripts {
