--- a/Universidade/Views/Disciplina/Create.cshtml
+++ b/Universidade/Views/Disciplina/Create.cshtml
@@ -28,8 +28,8 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="Professor" class="control-label"></label>
-                <select asp-for="Professor" class ="form-control" asp-items="ViewBag.Professor"></select>
+                <label asp-for="ProfessorId" class="control-label"></label>
+                <select asp-for="ProfessorId" class ="form-control" asp-items="ViewBag.Professor"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
