--- a/Universidade/Views/Professor/Edit.cshtml
+++ b/Universidade/Views/Professor/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Edit</h1>
-
+<br />
 <h4>Professor</h4>
 <hr />
 <div class="row">
@@ -28,15 +28,13 @@
                 <input asp-for="Data" class="form-control" />
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-danger">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
