--- a/Universidade/Views/Aluno/Delete.cshtml
+++ b/Universidade/Views/Aluno/Delete.cshtml
@@ -5,8 +5,8 @@
 }
 
 <h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<br />
+<h3>Você tem certeza quer deletar isso?</h3>
 <div>
     <h4>Aluno</h4>
     <hr />
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
