--- a/Universidade/Views/Aluno/Edit.cshtml
+++ b/Universidade/Views/Aluno/Edit.cshtml
@@ -1,50 +1,56 @@
 ﻿@model Universidade.Models.Aluno
 
 @{
-    ViewData["Title"] = "Editar Aluno";
+	ViewData["Title"] = "Editar Aluno";
 }
 
-<h2>Editar Aluno</h2>
+<h1>Edit</h1>
+<br />
+<h4>Aluno</h4>
+<hr />
+<div class="row">
+	<div class="col-md-4">
+		<form asp-action="Edit" method="post">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<input type="hidden" asp-for="Id" />
+			<div class="form-group">
+				<label asp-for="Nome"></label>
+				<input asp-for="Nome" class="form-control" />
+				<span asp-validation-for="Nome" class="text-danger"></span>
+			</div>
 
-<form asp-action="Edit" method="post">
-    <input type="hidden" asp-for="Id" />
+			<div class="form-group">
+				<label asp-for="Matricula"></label>
+				<input asp-for="Matricula" class="form-control" />
+				<span asp-validation-for="Matricula" class="text-danger"></span>
+			</div>
 
-    <div class="form-group">
-        <label asp-for="Nome"></label>
-        <input asp-for="Nome" class="form-control" />
-        <span asp-validation-for="Nome" class="text-danger"></span>
-    </div>
+			<div class="form-group">
+				<label asp-for="Data"></label>
+				<input asp-for="Data" class="form-control" type="date" />
+				<span asp-validation-for="Data" class="text-danger"></span>
+			</div>
 
-    <div class="form-group">
-        <label asp-for="Matricula"></label>
-        <input asp-for="Matricula" class="form-control" />
-        <span asp-validation-for="Matricula" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Data"></label>
-        <input asp-for="Data" class="form-control" type="date" />
-        <span asp-validation-for="Data" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label>Disciplinas</label>
-        @foreach (var disciplina in ViewBag.Disciplinas)
-        {
-            <div class="form-check">
-                <input type="checkbox" name="disciplinasSelecionadas" value="@disciplina.Id"
-                @(disciplina.Selecionado ? "checked" : "") class="form-check-input" />
-                <label class="form-check-label">@disciplina.Nome</label>
-            </div>
-        }
-    </div>
-
-    <button type="submit" class="btn btn-primary">Edit</button>
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
-</form>
+			<div class="form-group">
+				<label>Disciplinas</label>
+				@foreach (var disciplina in ViewBag.Disciplinas)
+				{
+					<div class="form-check">
+						<input type="checkbox" name="disciplinasSelecionadas" value="@disciplina.Id"
+						@(disciplina.Selecionado ? "checked" : "") class="form-check-input" />
+						<label class="form-check-label">@disciplina.Nome</label>
+					</div>
+				}
+			</div>
+			<div class="form-group">
+				<br />
+				<input type="submit" value="Save" class="btn btn-primary" />
+				<a asp-action="Index" class="btn btn-danger">Back to List</a>
+			</div>
+		</form>
+	</div>
+</div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+	<partial name="_ValidationScriptsPartial" />
 }
