--- a/Universidade/Views/Disciplina/Delete.cshtml
+++ b/Universidade/Views/Disciplina/Delete.cshtml
@@ -5,8 +5,8 @@
 }
 
 <h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<br />
+<h3>Você tem certeza quer deletar isso?</h3>
 <div>
     <h4>Disciplina</h4>
     <hr />
@@ -36,22 +36,16 @@
             @Html.DisplayFor(model => model.DataRegistro)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Alunos)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Alunos)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Professor)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Professor.Id)
+            @Html.DisplayFor(model => model.Professor.Nome)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
