--- a/Universidade/Views/Disciplina/Edit.cshtml
+++ b/Universidade/Views/Disciplina/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Edit</h1>
-
+<br />
 <h4>Disciplina</h4>
 <hr />
 <div class="row">
@@ -34,14 +34,12 @@
                 <span asp-validation-for="Professor" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <br />
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-danger">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
