--- a/Universidade/Views/Home/Index.cshtml
+++ b/Universidade/Views/Home/Index.cshtml
@@ -1,8 +1,34 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Pagina inicial";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron text-center">
+    <h1 class="display-4">Bem vindo! ao gerenciamento PS</h1>
+    <p class="lead"></p>
+</div>
+
+<div class="container">
+    <br />
+    <div style="text-align: center;">
+        <img src="~/img/imagem-Campus.jpg" alt="Imagem exemplo campus" style="width:500px;height:200px;border-radius:13%">
+        
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-md-4" style="text-align: center;">
+            <h3>Alunos</h3>
+            <p>Gerenciar o banco de dados de Alunos.</p>
+            <a class="btn btn-info btn-lg" href="/Aluno/Index" role="button" style="border-radius:5%;color:ghostwhite">Listagem</a>
+        </div>
+        <div class="col-md-4" style="text-align: center;">
+            <h3>Disciplinas</h3>
+            <p>Gerenciar o banco de dados de Disciplinas.</p>
+            <a class="btn btn-info btn-lg" href="/Disciplina/Index" role="button" style="border-radius:5%;color:ghostwhite">Listagem</a>
+        </div>
+        <div class="col-md-4" style="text-align: center;">
+            <h3>Professores</h3>
+            <p>Gerenciar o banco de dados de Professores.</p>
+            <a class="btn btn-info btn-lg" href="/Professores/Index" role="button" style="border-radius:5%;color:ghostwhite">Listagem</a>
+        </div>
+    </div>
 </div>
