--- a/Universidade/Views/Shared/_Layout.cshtml
+++ b/Universidade/Views/Shared/_Layout.cshtml
@@ -3,36 +3,34 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Universidade</title>
+    <title>@ViewData["Title"] - Universidade Paraiba do Sul</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Universidade.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Universidade</a>
+                <img src="~/img/icone-Universidade.jpg" alt="Icone da  universidade" style="width:30px;height:auto;border-radius:50%">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:aqua;padding-left:10px">Universidade Paraiba do Sul</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <li class="nav-item" >
+                            <a class="nav-link" style="color:aqua" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" style="color:aqua" asp-area="" asp-controller="Disciplina" asp-action="Index">Disciplinas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Disciplina" asp-action="Index">Disciplinas</a>
+                            <a class="nav-link" style="color:aqua" asp-area="" asp-controller="Aluno" asp-action="Index">Alunos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Aluno" asp-action="Index">Alunos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Index">Professores</a>
+                            <a class="nav-link" style="color:aqua" asp-area="" asp-controller="Professor" asp-action="Index">Professores</a>
                         </li>
                     </ul>
                 </div>
@@ -47,7 +45,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Universidade - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <h6>Universidade Paraiba do Sul</h6>
+            <h6><strong>Contato: </strong>+55 24 0000-0001</h6>
+            <h6><strong>Email: </strong>univPaSu01@gmail.com</h6>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
