--- a/Universidade/Views/Aluno/Index.cshtml
+++ b/Universidade/Views/Aluno/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Universidade.Models.Aluno>
 
 @{
-	ViewData["Title"] = "Index";
+	ViewData["Title"] = "Alunos";
 }
 
-<h1>Index</h1>
+<h1>Alunos</h1>
 
 <p>
 	<a asp-action="Create" class="btn btn-success">Create New</a>
