--- a/Universidade/Views/Disciplina/Index.cshtml
+++ b/Universidade/Views/Disciplina/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Universidade.Models.Disciplina>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Disciplinas";
 }
 
-<h1>Index</h1>
+<h1>Disciplinas</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-success">Create New</a>
