--- a/Universidade/Views/Home/Index.cshtml
+++ b/Universidade/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
         <div class="col-md-4" style="text-align: center;">
             <h3>Professores</h3>
             <p>Gerenciar o banco de dados de Professores.</p>
-            <a class="btn btn-info btn-lg" href="/Professores/Index" role="button" style="border-radius:5%;color:ghostwhite">Listagem</a>
+            <a class="btn btn-info btn-lg" href="/Professor/Index" role="button" style="border-radius:5%;color:ghostwhite">Listagem</a>
         </div>
     </div>
 </div>
