--- a/Universidade/Views/Professor/Index.cshtml
+++ b/Universidade/Views/Professor/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Universidade.Models.Professor>
 
 @{
-	ViewData["Title"] = "Index";
+	ViewData["Title"] = "Professores";
 }
 
-<h1>Index</h1>
+<h1>Professores</h1>
 
 <p>
 	<a asp-controller="Professor" asp-action="Create" class="btn btn-success">Create New</a>
